--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
